--- a/atlas/backend/requirements.txt
+++ b/atlas/backend/requirements.txt
@@ -24,6 +24,10 @@ joblib==1.3.2
 pydantic==2.5.3
 pydantic-settings==2.1.0
 
+# Authentication
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+
 # Utilities
 python-dateutil==2.8.2
 httpx==0.26.0
