--- a/atlas/backend/Dockerfile
+++ b/atlas/backend/Dockerfile
@@ -9,8 +9,11 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
-COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+#COPY requirements.txt .
+#RUN pip install --no-cache-dir -r requirements.txt
+COPY atlas/backend/requirements.txt .
+RUN pip install -r requirements.txt
+
 
 # Copy application code
 COPY . .
